# yew-app

./: Cargo.toml  index.html
src/: app.rs  components.rs  lib.rs  main.rs  pages.rs  router.rs  services.rs
src/components/: chat_input.rs  comp.rs  text_input.rs
src/pages/: chat.rs  home.rs  page_not_found.rs
src/services/: test_service.rs  websocket.rs
