[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yew = "0.19"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
#yew-router = { version = "0.16", features = [] }
yew-router = { git = "https://github.com/yewstack/yew/", features = [] }
yew-agent = { git = "https://github.com/yewstack/yew/", features = [] }
wasm-logger = "0.2"
log = "0.4"
wasm-bindgen = { version = "0.2", features = [] }
wasm-bindgen-futures = { version = "0.4", features = [] }
web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent"] }
reqwasm = { version = "0.5", features = ["http", "websocket"] }
